[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/ship.gd" type="Script" id=1]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ships/1/midlife_mov_up/midlife_mov_up-4.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ships/1/finallife_mov_up/finallife_mov_up-2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ships/1/midlife_mov_up/midlife_mov_up-2.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ships/1/maxlife_mov_up/maxlife_mov_up-2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ships/1/midlife_mov_up/midlife_mov_up-5.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ships/1/finallife_mov_up/finallife_mov_up-4.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ships/1/finallife_mov_up/finallife_mov_up-5.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-6.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-5.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ships/1/midlife_mov_up/midlife_mov_up-3.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ships/1/finallife_mov_up/finallife_mov_up-1.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-4.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ships/1/maxlife_mov_up/maxlife_mov_up-3.png" type="Texture" id=16]
[ext_resource path="res://assets/images/ships/1/maxlife_mov_up/maxlife_mov_up-4.png" type="Texture" id=17]
[ext_resource path="res://assets/images/ships/1/maxlife_mov_up/maxlife_mov_up-1.png" type="Texture" id=18]
[ext_resource path="res://assets/images/gui/fly_bar/fly_bar-2.png" type="Texture" id=19]
[ext_resource path="res://assets/images/ships/1/midlife_mov_up/midlife_mov_up-1.png" type="Texture" id=20]
[ext_resource path="res://assets/images/ships/1/maxlife_mov_up/maxlife_mov_up-5.png" type="Texture" id=21]
[ext_resource path="res://assets/images/ships/1/finallife_mov_up/finallife_mov_up-3.png" type="Texture" id=22]
[ext_resource path="res://assets/images/shieldPower-3.png" type="Texture" id=23]
[ext_resource path="res://assets/images/shieldPower-5.png" type="Texture" id=24]
[ext_resource path="res://assets/images/shieldPower-2.png" type="Texture" id=25]
[ext_resource path="res://assets/images/shieldPower-1.png" type="Texture" id=26]
[ext_resource path="res://assets/images/shieldPower-4.png" type="Texture" id=27]
[ext_resource path="res://assets/images/speedPower-2.png" type="Texture" id=28]
[ext_resource path="res://assets/images/speedPower-4.png" type="Texture" id=29]
[ext_resource path="res://assets/images/speedPower-5.png" type="Texture" id=30]
[ext_resource path="res://assets/images/speedPower-3.png" type="Texture" id=31]
[ext_resource path="res://assets/images/speedPower-1.png" type="Texture" id=32]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 21 ) ],
"loop": true,
"name": "fly_max",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idle_max",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle_final",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 22 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "fly_final",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "fly_mid",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "idle_mid",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 19 ), ExtResource( 2 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Ship" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.05436, 1.92773 )
scale = Vector2( 1.9484, 2.16848 )
polygon = PoolVector2Array( -16.1324, 8.27298, -12.9485, 4.7145, -5.45697, 5.08908, -8.2663, -3.3389, -0.587471, -12.3287, 8.02779, -4.64991, 4.46931, 4.33993, 12.3354, 4.7145, 16.0812, 8.27298, 8.77694, 11.0823, 10.2752, 13.5171, -10.3265, 13.1425, -9.95189, 10.895 )

[node name="BodySprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle_max"

[node name="SpeedSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2.3, 2.3 )
frames = SubResource( 4 )
frame = 4
playing = true

[node name="ShieldSprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2.3, 2.3 )
frames = SubResource( 3 )
playing = true

[node name="Gui" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlyBar" type="AnimatedSprite" parent="Gui"]
position = Vector2( -1.87289, 13.2975 )
frames = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="HitTimeShowIn" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="HitTimeShowIn" to="." method="_on_HitTimeSHowIn_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
